spacing issue fix

--- a/bored-game/css/style.css
+++ b/bored-game/css/style.css
@@ -537,7 +537,7 @@ input[type=radio]:checked {
 /* Results - Cards */
 
 .cards-list {
-    height: 150rem;
+    height: 100vh;
     max-width: 80rem;
     min-width: 52rem;
     position: absolute;
@@ -549,7 +549,7 @@ input[type=radio]:checked {
     align-items: flex-start;
     flex-wrap: wrap;
     margin-left: 31rem;
-    border: 1px solid red;
+    /* border: 1px solid red; */
   }
 
   .card {
@@ -583,7 +583,6 @@ input[type=radio]:checked {
   .card_title h5 {
     font-size: 1.75rem;
     margin-top: .5rem;
-    margin-bottom: ;
   }
 
   .card_title a {
